cabal-version:        2.4
name:                 mlabs-plutus-use-cases
version:              0.1.0.0
license-file:         LICENSE
author:               mlabs
maintainer:           anton@mlabs.gmail
build-type:           Simple
extra-source-files:   CHANGELOG.md
Hs-Source-Dirs:       src/

-- as per Specifications.md <To be included everywhere>
common common-specifications
  Ghc-Options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Werror
                      -Wincomplete-record-updates
                      -Wredundant-constraints                   

  -- any other extensions to be enabled locally
  default-extensions: BangPatterns
                      BinaryLiterals
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DerivingStrategies
                      DuplicateRecordFields
                      EmptyCase
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      HexFloatLiterals
                      InstanceSigs
                      ImportQualifiedPost
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      NumericUnderscores
                      OverloadedStrings
                      StandaloneDeriving
                      TupleSections
                      TypeApplications
                      TypeOperators
                      TypeSynonymInstances
                      UndecidableInstances

  build-depends:        base >=4.14 && <4.15
                      , aeson
                      , bytestring
                      , containers
                      , playground-common
                      , plutus-core
                      , plutus-contract
                      , plutus-ledger
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-pab
                      , prettyprinter
                      , lens
                      , text
                      , freer-extras

  default-language:   Haskell2010
                    
library
  import:             common-specifications
  
  build-depends:        base >=4.14 && <4.15
                      , aeson
                      , ansi-terminal
                      , bytestring
                      , containers
                      , extra
                      , freer-simple
                      , mtl
                      , playground-common
                      , plutus-core
                      , plutus-contract
                      , plutus-ledger
                      , plutus-tx
                      , plutus-ledger-api
                      , plutus-tx-plugin
                      , plutus-pab
                      , plutus-use-cases
                      , prettyprinter
                      , pretty-show
                      , row-types
                      , stm
                      , lens
                      , tasty
                      , tasty-hunit
                      , text
                      , freer-extras
                      , insert-ordered-containers
                      
  hs-source-dirs:     src/
  
  exposed-modules:    Mlabs.Control.Check
                      Mlabs.Control.Monad.State
                      Mlabs.Data.AssocMap
                      Mlabs.Data.List
                      Mlabs.Data.Maybe
                      Mlabs.Data.Ray
                      Mlabs.Data.Ord
                      Mlabs.Demo.Contract.Burn
                      Mlabs.Demo.Contract.Mint
                      Mlabs.Emulator.App
                      Mlabs.Emulator.Blockchain
                      Mlabs.Emulator.Scene
                      Mlabs.Emulator.Script
                      Mlabs.Emulator.Types
                      Mlabs.Lending.Contract
                      Mlabs.Lending.Contract.Api
                      Mlabs.Lending.Contract.Forge
                      Mlabs.Lending.Contract.Emulator.Client
                      Mlabs.Lending.Contract.Simulator.Handler
                      Mlabs.Lending.Contract.Server
                      Mlabs.Lending.Contract.StateMachine
                      Mlabs.Lending.Logic.App
                      Mlabs.Lending.Logic.InterestRate
                      Mlabs.Lending.Logic.React
                      Mlabs.Lending.Logic.State
                      Mlabs.Lending.Logic.Types
                      Mlabs.Nft.Logic.App
                      Mlabs.Nft.Logic.React
                      Mlabs.Nft.Logic.State
                      Mlabs.Nft.Logic.Types
                      Mlabs.Nft.Contract
                      Mlabs.Nft.Contract.Emulator.Client
                      Mlabs.Nft.Contract.Simulator.Handler
                      Mlabs.Nft.Contract.Api
                      Mlabs.Nft.Contract.Forge
                      Mlabs.Nft.Contract.Server
                      Mlabs.Nft.Contract.StateMachine
                      Mlabs.Plutus.Contract
                      Mlabs.Plutus.Contract.StateMachine
                      Mlabs.Plutus.PAB
                      Mlabs.System.Console.PrettyLogger
                      Mlabs.System.Console.Utils

executable mlabs-plutus-use-cases
  import:             common-specifications
  
  main-is:            app/Main.hs

-- executable demo
  -- main-is: Main.hs
  -- hs-source-dirs: demo
  -- default-extensions: AllowAmbiguousTypes BlockArguments BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFunctor DeriveGeneric DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExplicitNamespaces FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving InstanceSigs LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeOperators TypeSynonymInstances UndecidableInstances ViewPatterns ImportQualifiedPost RoleAnnotations
  -- ghc-options: -Wall -Wcompat -Weverything -Wmissing-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-safe-haskell-mode -Wno-unused-packages -Wno-unsafe -Wno-prepositive-qualified-module -Wno-missing-export-lists -Wno-unused-imports -Werror -Wwarn=redundant-constraints -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fobject-code -fno-strictness -threaded -rtsopts -with-rtsopts=-N
  -- build-depends:
      -- aeson
    -- , base
    -- , bytestring
    -- , cardano-prelude
    -- , containers
    -- , data-default-class
    -- , freer-extras
    -- , freer-simple
    -- , lens
    -- , mlabs-plutus-use-cases
    -- , playground-common
    -- , plutus-contract
    -- , plutus-core
    -- , plutus-ledger
    -- , plutus-ledger-api
    -- , plutus-pab
    -- , plutus-tx
    -- , plutus-tx-plugin
    -- , prettyprinter
    -- , row-types
    -- , text
    -- , vector
  -- default-language: Haskell2010

executable nft-demo
  import:             common-specifications
  
  main-is:            nft-demo/Main.hs
  
  build-depends:      base >=4.14 && <4.15
                      , aeson
                      , bytestring
                      , containers
                      , playground-common
                      , plutus-core
                      , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-pab
                      , prettyprinter
                      , lens
                      , mtl
                      , text
                      , freer-extras
                      , freer-simple
                      , mlabs-plutus-use-cases
                      , ansi-terminal
                      , bytestring
                      , cardano-prelude
                      , data-default-class
                      , lens
                      , playground-common
                      , prettyprinter
                      , row-types
                      , vector

executable lendex-demo
  import:             common-specifications
  
  main-is:            lendex-demo/Main.hs

Test-suite mlabs-plutus-use-cases-tests
  import:             common-specifications
  
  Type:               exitcode-stdio-1.0
  
  hs-source-dirs:     test
  
  Main-is:            Main.hs
  
  Other-modules:      Test.Demo.Contract.Mint
                      Test.Lending.Contract
                      Test.Lending.Init
                      Test.Lending.Logic
                      Test.Nft.Contract
                      Test.Nft.Init
                      Test.Nft.Logic
                      Test.Utils